vpc/general-vpc-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  VPC infrastructure stack. A Vpc with 2 public and 2 private subnet will be created, in which the subnet 1 will be the 
  IPv4 and IPv6 dual stack subnet, the subnet 2 will be the IPv4 only subnet (The IPv6 only subnet creation is not 
  supported by CloudFormation yet, only via console or CLI).
Mappings:
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://cloudformation-templates-shared-files/mapping/cidr.yml

Resources:
  # VPC
  GeneralVpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', Vpc, Ipv4 ]
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc' ]]

  GeneralVpcDefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: General Vpc Default Security Group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all ipv4 outbound traffic by default
          IpProtocol: -1
        - CidrIpv6: ::/0
          Description: Allow all ipv6 outbound traffic by default
          IpProtocol: -1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all ipv4 inbound traffic by default
          IpProtocol: -1
          FromPort: -1
          ToPort: -1
        - CidrIpv6: ::0/0
          Description: Allow all ipv6 inbound traffic by default
          IpProtocol: -1
          FromPort: -1
          ToPort: -1
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc-SecurityGroup' ] ]
      VpcId: !Ref GeneralVpc

  GeneralVpcIPv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref GeneralVpc

  GeneralVpcEgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      VpcId: !Ref GeneralVpc

  # Internet Gateway
  GeneralVpcInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc', 'InternetGateway' ]]

  GeneralVpcInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref GeneralVpc
      InternetGatewayId: !Ref GeneralVpcInternetGateway

  # Routing - public subnet 1 and 2
  GeneralVpcPublicSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GeneralVpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc', 'PublicSubnet1', 'RouteTable' ]]

  GeneralVpcPublicSubnet1Route:
    DependsOn: GeneralVpcInternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref GeneralVpcPublicSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GeneralVpcInternetGateway

  GeneralVpcPublicSubnet1Ipv6Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref GeneralVpcPublicSubnet1RouteTable
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref GeneralVpcInternetGateway

  GeneralVpcPublicSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GeneralVpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc', 'PublicSubnet2', 'RouteTable' ]]

  GeneralVpcPublicSubnet2Route:
    DependsOn: GeneralVpcInternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref GeneralVpcPublicSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GeneralVpcInternetGateway

  # Routing - private subnet 1 and 2
  GeneralVpcPrivateSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GeneralVpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc', 'PrivateSubnet1', 'RouteTable' ]]

  GeneralVpcPrivateSubnet1Ipv6Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref GeneralVpcPrivateSubnet1RouteTable
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref GeneralVpcEgressOnlyInternetGateway

  GeneralVpcPrivateSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GeneralVpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: AWS::Region, 'GeneralVpc', 'PrivateSubnet2', 'RouteTable' ]]

  # Access control
  GeneralVpcPrivateSubnetsNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref GeneralVpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, 'GeneralVpc', 'NetworkAcl' ]]

  GeneralVpcPrivateSubnetsNetworkAclInboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref GeneralVpcPrivateSubnetsNetworkAcl
      RuleNumber: 1
      PortRange:
        From: 22 # SSH
        To: 22
      Protocol: 6 # TCP
      RuleAction: allow
      Egress: false
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', Vpc, Ipv4 ]

  GeneralVpcPrivateSubnetsNetworkAclOutboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref GeneralVpcPrivateSubnetsNetworkAcl
      RuleNumber: 2
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  GeneralVpcPrivateSubnetsNetworkAclIpv6OutboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref GeneralVpcPrivateSubnetsNetworkAcl
      RuleNumber: 3
      Protocol: -1
      RuleAction: allow
      Egress: true
      Ipv6CidrBlock: ::/0

  # Public subnet 1 and 2
  GeneralVpcPublicSubnet1:
    DependsOn: GeneralVpcIPv6CidrBlock
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GeneralVpc
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', PublicSubnet1, Ipv4 ]
      Ipv6CidrBlock:
        Fn::Sub:
          - '${VpcPart}${SubnetPart}'
          - VpcPart: !Select [ '0', !Split [ '00::/56', !Select [ '0', !GetAtt GeneralVpc.Ipv6CidrBlocks ]]]
            SubnetPart:
              Fn::FindInMap: [ 'GeneralVpc', PublicSubnet1, Ipv6 ]
      AssignIpv6AddressOnCreation: true
      AvailabilityZone: !Sub '${AWS::Region}a'
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, 'GeneralVpc', 'PublicSubnet1', 'Subnet' ]]

  GeneralVpcPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref GeneralVpcPublicSubnet1
      RouteTableId: !Ref GeneralVpcPublicSubnet1RouteTable

  GeneralVpcPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GeneralVpc
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', PublicSubnet2, Ipv4 ]
      AvailabilityZone: !Sub '${AWS::Region}b'
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, 'GeneralVpc', 'PublicSubnet2', 'Subnet' ]]

  GeneralVpcPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref GeneralVpcPublicSubnet2
      RouteTableId: !Ref GeneralVpcPublicSubnet2RouteTable

  # Private subnet 1 and 2
  GeneralVpcPrivateSubnet1:
    DependsOn: GeneralVpcIPv6CidrBlock
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GeneralVpc
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', PrivateSubnet1, Ipv4 ]
      Ipv6CidrBlock:
        Fn::Sub:
          - '${VpcPart}${SubnetPart}'
          - VpcPart: !Select [ '0', !Split [ '00::/56', !Select [ '0', !GetAtt GeneralVpc.Ipv6CidrBlocks ]] ]
            SubnetPart:
              Fn::FindInMap: [ 'GeneralVpc', PrivateSubnet1, Ipv6 ]
      AssignIpv6AddressOnCreation: true
      AvailabilityZone: !Sub '${AWS::Region}a'
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, 'GeneralVpc', 'PrivateSubnet1', 'Subnet' ]]

  GeneralVpcPrivateSubnet1AclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref GeneralVpcPrivateSubnetsNetworkAcl
      SubnetId: !Ref GeneralVpcPrivateSubnet1

  GeneralVpcPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref GeneralVpcPrivateSubnet1
      RouteTableId: !Ref GeneralVpcPrivateSubnet1RouteTable

  GeneralVpcPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GeneralVpc
      CidrBlock:
        Fn::FindInMap: [ 'GeneralVpc', PrivateSubnet2, Ipv4 ]
      AvailabilityZone: !Sub '${AWS::Region}b'
      Tags:
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, 'GeneralVpc', 'PrivateSubnet2', 'Subnet' ]]

  GeneralVpcPrivateSubnet2AclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref GeneralVpcPrivateSubnetsNetworkAcl
      SubnetId: !Ref GeneralVpcPrivateSubnet2

  GeneralVpcPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref GeneralVpcPrivateSubnet2
      RouteTableId: !Ref GeneralVpcPrivateSubnet2RouteTable

  GeneralVpcInterfaceEndpointSSM:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: yes
      SecurityGroupIds:
        - !Ref GeneralVpcDefaultSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      SubnetIds:
        - !Ref GeneralVpcPrivateSubnet1
        - !Ref GeneralVpcPrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref GeneralVpc

  GeneralVpcInterfaceEndpointEC2Messages:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: yes
      SecurityGroupIds:
        - !Ref GeneralVpcDefaultSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      SubnetIds:
        - !Ref GeneralVpcPrivateSubnet1
        - !Ref GeneralVpcPrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref GeneralVpc

  GeneralVpcInterfaceEndpointEC2:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: yes
      SecurityGroupIds:
        - !Ref GeneralVpcDefaultSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2'
      SubnetIds:
        - !Ref GeneralVpcPrivateSubnet1
        - !Ref GeneralVpcPrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref GeneralVpc

  GeneralVpcInterfaceEndpointSSMMessages:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: yes
      SecurityGroupIds:
        - !Ref GeneralVpcDefaultSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      SubnetIds:
        - !Ref GeneralVpcPrivateSubnet1
        - !Ref GeneralVpcPrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref GeneralVpc

  GeneralVpcInterfaceEndpointCloudWatch:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: yes
      SecurityGroupIds:
        - !Ref GeneralVpcDefaultSecurityGroup
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.monitoring'
      SubnetIds:
        - !Ref GeneralVpcPrivateSubnet1
        - !Ref GeneralVpcPrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref GeneralVpc

Outputs:
  GeneralVpcRef:
    Value: !Ref GeneralVpc
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpc-Ref'
  GeneralVpcCidrBlock:
    Value: !GetAtt GeneralVpc.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpc-CidrBlock'
  GeneralVpcCidrBlockAssociation:
    Value: !Select [ '0', !GetAtt GeneralVpc.CidrBlockAssociations ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpc-CidrBlockAssociation'
  GeneralVpcIpv6CidrBlock:
    Value: !Select [ '0', !GetAtt GeneralVpc.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpc-Ipv6CidrBlock'
  GeneralVpcVpcId:
    Value: !GetAtt GeneralVpc.VpcId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpc-VpcId'
  GeneralVpcDefaultSecurityGroupRef:
    Value: !Ref GeneralVpcDefaultSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcDefaultSecurityGroup-Ref'
  GeneralVpcDefaultSecurityGroupGroupId:
    Value: !GetAtt GeneralVpcDefaultSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcDefaultSecurityGroup-GroupId'
  GeneralVpcDefaultSecurityGroupVpcId:
    Value: !GetAtt GeneralVpcDefaultSecurityGroup.VpcId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcDefaultSecurityGroup-VpcId'
  GeneralVpcIPv6CidrBlockRef:
    Value: !Ref GeneralVpcIPv6CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcIPv6CidrBlock-Ref'
  GeneralVpcEgressOnlyInternetGatewayRef:
    Value: !Ref GeneralVpcEgressOnlyInternetGateway
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcEgressOnlyInternetGateway-Ref'
  GeneralVpcInternetGatewayRef:
    Value: !Ref GeneralVpcInternetGateway
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcInternetGateway-Ref'
  GeneralVpcPublicSubnet1RouteTableRef:
    Value: !Ref GeneralVpcPublicSubnet1RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1RouteTable-Ref'
  GeneralVpcPublicSubnet1RouteTableRouteTableId:
    Value: !GetAtt GeneralVpcPublicSubnet1RouteTable.RouteTableId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1RouteTable-RouteTableId'
  GeneralVpcPublicSubnet1RouteRef:
    Value: !Ref GeneralVpcPublicSubnet1Route
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1Route-Ref'
  GeneralVpcPublicSubnet1RouteCidrBlock:
    Value: !GetAtt GeneralVpcPublicSubnet1Route.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1Route-CidrBlock'
  GeneralVpcPublicSubnet1Ipv6RouteRef:
    Value: !Ref GeneralVpcPublicSubnet1Ipv6Route
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1Ipv6Route-Ref'
  GeneralVpcPublicSubnet1Ipv6RouteCidrBlock:
    Value: !GetAtt GeneralVpcPublicSubnet1Ipv6Route.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1Ipv6Route-CidrBlock'
  GeneralVpcPublicSubnet2RouteTableRef:
    Value: !Ref GeneralVpcPublicSubnet2RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2RouteTable-Ref'
  GeneralVpcPublicSubnet2RouteTableRouteTableId:
    Value: !GetAtt GeneralVpcPublicSubnet2RouteTable.RouteTableId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2RouteTable-RouteTableId'
  GeneralVpcPublicSubnet2RouteRef:
    Value: !Ref GeneralVpcPublicSubnet2Route
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2Route-Ref'
  GeneralVpcPublicSubnet2RouteCidrBlock:
    Value: !GetAtt GeneralVpcPublicSubnet2Route.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2Route-CidrBlock'
  GeneralVpcPrivateSubnet1RouteTableRef:
    Value: !Ref GeneralVpcPrivateSubnet1RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1RouteTable-Ref'
  GeneralVpcPrivateSubnet1RouteTableRouteTableId:
    Value: !GetAtt GeneralVpcPrivateSubnet1RouteTable.RouteTableId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1RouteTable-RouteTableId'
  GeneralVpcPrivateSubnet1Ipv6RouteRef:
    Value: !Ref GeneralVpcPrivateSubnet1Ipv6Route
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1Ipv6Route-Ref'
  GeneralVpcPrivateSubnet1Ipv6RouteCidrBlock:
    Value: !GetAtt GeneralVpcPrivateSubnet1Ipv6Route.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1Ipv6Route-CidrBlock'
  GeneralVpcPrivateSubnet2RouteTableRef:
    Value: !Ref GeneralVpcPrivateSubnet2RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2RouteTable-Ref'
  GeneralVpcPrivateSubnet2RouteTableRouteTableId:
    Value: !GetAtt GeneralVpcPrivateSubnet2RouteTable.RouteTableId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2RouteTable-RouteTableId'
  GeneralVpcPrivateSubnetsNetworkAclRef:
    Value: !Ref GeneralVpcPrivateSubnetsNetworkAcl
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnetsNetworkAcl-Ref'
  GeneralVpcPublicSubnet1Ref:
    Value: !Ref GeneralVpcPublicSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-Ref'
  GeneralVpcPublicSubnet1AvailabilityZone:
    Value: !GetAtt GeneralVpcPublicSubnet1.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-AvailabilityZone'
  GeneralVpcPublicSubnet1AvailabilityZoneId:
    Value: !GetAtt GeneralVpcPublicSubnet1.AvailabilityZoneId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-AvailabilityZoneId'
  GeneralVpcPublicSubnet1CidrBlock:
    Value: !GetAtt GeneralVpcPublicSubnet1.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-CidrBlock'
  GeneralVpcPublicSubnet1Ipv6CidrBlock:
    Value: !Select [ '0', !GetAtt GeneralVpcPublicSubnet1.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-Ipv6CidrBlock'
  GeneralVpcPublicSubnet1SubnetId:
    Value: !GetAtt GeneralVpcPublicSubnet1.SubnetId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet1-SubnetId'
  GeneralVpcPublicSubnet2Ref:
    Value: !Ref GeneralVpcPublicSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2-Ref'
  GeneralVpcPublicSubnet2AvailabilityZone:
    Value: !GetAtt GeneralVpcPublicSubnet2.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2-AvailabilityZone'
  GeneralVpcPublicSubnet2AvailabilityZoneId:
    Value: !GetAtt GeneralVpcPublicSubnet2.AvailabilityZoneId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2-AvailabilityZoneId'
  GeneralVpcPublicSubnet2CidrBlock:
    Value: !GetAtt GeneralVpcPublicSubnet2.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2-CidrBlock'
  GeneralVpcPublicSubnet2SubnetId:
    Value: !GetAtt GeneralVpcPublicSubnet2.SubnetId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPublicSubnet2-SubnetId'
  GeneralVpcPrivateSubnet1Ref:
    Value: !Ref GeneralVpcPrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-Ref'
  GeneralVpcPrivateSubnet1AvailabilityZone:
    Value: !GetAtt GeneralVpcPrivateSubnet1.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-AvailabilityZone'
  GeneralVpcPrivateSubnet1AvailabilityZoneId:
    Value: !GetAtt GeneralVpcPrivateSubnet1.AvailabilityZoneId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-AvailabilityZoneId'
  GeneralVpcPrivateSubnet1CidrBlock:
    Value: !GetAtt GeneralVpcPrivateSubnet1.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-CidrBlock'
  GeneralVpcPrivateSubnet1Ipv6CidrBlock:
    Value: !Select [ '0', !GetAtt GeneralVpcPrivateSubnet1.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-Ipv6CidrBlock'
  GeneralVpcPrivateSubnet1SubnetId:
    Value: !GetAtt GeneralVpcPrivateSubnet1.SubnetId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet1-SubnetId'
  GeneralVpcPrivateSubnet2Ref:
    Value: !Ref GeneralVpcPrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2-Ref'
  GeneralVpcPrivateSubnet2AvailabilityZone:
    Value: !GetAtt GeneralVpcPrivateSubnet2.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2-AvailabilityZone'
  GeneralVpcPrivateSubnet2AvailabilityZoneId:
    Value: !GetAtt GeneralVpcPrivateSubnet2.AvailabilityZoneId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2-AvailabilityZoneId'
  GeneralVpcPrivateSubnet2CidrBlock:
    Value: !GetAtt GeneralVpcPrivateSubnet2.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2-CidrBlock'
  GeneralVpcPrivateSubnet2SubnetId:
    Value: !GetAtt GeneralVpcPrivateSubnet2.SubnetId
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPC-GeneralVpcPrivateSubnet2-SubnetId'
  GeneralVpcInterfaceEndpointSSMRef:
    Value: !Ref GeneralVpcInterfaceEndpointSSM
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSM-Ref'
  GeneralVpcInterfaceEndpointSSMCreationTimestamp:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSM.CreationTimestamp
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSM-CreationTimestamp'
  GeneralVpcInterfaceEndpointSSMDnsEntries:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSM.DnsEntries
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSM-DnsEntries'
  GeneralVpcInterfaceEndpointSSMId:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSM.Id
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSM-Id'
  GeneralVpcInterfaceEndpointSSMNetworkInterfaceIds:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSM.NetworkInterfaceIds
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSM-NetworkInterfaceIds'
  GeneralVpcInterfaceEndpointEC2MessagesRef:
    Value: !Ref GeneralVpcInterfaceEndpointEC2Messages
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2Messages-Ref'
  GeneralVpcInterfaceEndpointEC2MessagesCreationTimestamp:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2Messages.CreationTimestamp
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2Messages-CreationTimestamp'
  GeneralVpcInterfaceEndpointEC2MessagesDnsEntries:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2Messages.DnsEntries
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2Messages-DnsEntries'
  GeneralVpcInterfaceEndpointEC2MessagesId:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2Messages.Id
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2Messages-Id'
  GeneralVpcInterfaceEndpointEC2MessagesNetworkInterfaceIds:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2Messages.NetworkInterfaceIds
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2Messages-NetworkInterfaceIds'
  GeneralVpcInterfaceEndpointEC2Ref:
    Value: !Ref GeneralVpcInterfaceEndpointEC2
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2-Ref'
  GeneralVpcInterfaceEndpointEC2CreationTimestamp:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2.CreationTimestamp
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2-CreationTimestamp'
  GeneralVpcInterfaceEndpointEC2DnsEntries:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2.DnsEntries
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2-DnsEntries'
  GeneralVpcInterfaceEndpointEC2Id:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2.Id
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2-Id'
  GeneralVpcInterfaceEndpointEC2NetworkInterfaceIds:
    Value: !GetAtt GeneralVpcInterfaceEndpointEC2.NetworkInterfaceIds
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointEC2-NetworkInterfaceIds'
  GeneralVpcInterfaceEndpointSSMMessagesRef:
    Value: !Ref GeneralVpcInterfaceEndpointSSMMessages
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSMMessages-Ref'
  GeneralVpcInterfaceEndpointSSMMessagesCreationTimestamp:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSMMessages.CreationTimestamp
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSMMessages-CreationTimestamp'
  GeneralVpcInterfaceEndpointSSMMessagesDnsEntries:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSMMessages.DnsEntries
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSMMessages-DnsEntries'
  GeneralVpcInterfaceEndpointSSMMessagesId:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSMMessages.Id
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSMMessages-Id'
  GeneralVpcInterfaceEndpointSSMMessagesNetworkInterfaceIds:
    Value: !GetAtt GeneralVpcInterfaceEndpointSSMMessages.NetworkInterfaceIds
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointSSMMessages-NetworkInterfaceIds'
  GeneralVpcInterfaceEndpointCloudWatchRef:
    Value: !Ref GeneralVpcInterfaceEndpointCloudWatch
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointCloudWatch-Ref'
  GeneralVpcInterfaceEndpointCloudWatchCreationTimestamp:
    Value: !GetAtt GeneralVpcInterfaceEndpointCloudWatch.CreationTimestamp
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointCloudWatch-CreationTimestamp'
  GeneralVpcInterfaceEndpointCloudWatchDnsEntries:
    Value: !GetAtt GeneralVpcInterfaceEndpointCloudWatch.DnsEntries
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointCloudWatch-DnsEntries'
  GeneralVpcInterfaceEndpointCloudWatchId:
    Value: !GetAtt GeneralVpcInterfaceEndpointCloudWatch.Id
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointCloudWatch-Id'
  GeneralVpcInterfaceEndpointCloudWatchNetworkInterfaceIds:
    Value: !GetAtt GeneralVpcInterfaceEndpointCloudWatch.NetworkInterfaceIds
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-EC2-VPCEndpoint-GeneralVpcInterfaceEndpointCloudWatch-NetworkInterfaceIds'
