vpc/vpc-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  VPC infrastructure stack. A Vpc with 2 public and 2 private subnet will be created, in which the subnet 1 will be the 
  IPv4 and IPv6 dual stack subnet, the subnet 2 will be the IPv4 only subnet (The IPv6 only subnet creation is not 
  supported by CloudFormation yet, only via console or CLI).
Parameters:
  Category:
    Description: The category of VPC
    Type: String
    Default: GENERAL
    AllowedValues:
      - GENERAL

Mappings:
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://cloudformation-templates-shared-files/mapping/cidr.yml

Resources:
  # VPC
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, Vpc, Ipv4 ]
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'Vpc' ]]
  IPv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      AmazonProvidedIpv6CidrBlock: true
      VpcId: !Ref Vpc
  EgressOnlyInternetGateway:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      VpcId: !Ref Vpc

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'InternetGateway' ]]
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  # Routing - public subnet 1 and 2
  PublicSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'RouteTable', 'PublicSubnet1' ]]
  PublicSubnet1Route:
    DependsOn: InternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet1Ipv6Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnet1RouteTable
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref InternetGateway
  PublicSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'RouteTable', 'PublicSubnet2' ]]
  PublicSubnet2Route:
    DependsOn: InternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway


  # Routing - private subnet 1 and 2
  PrivateSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'RouteTable', 'PrivateSubnet1' ]]
  PrivateSubnet1Ipv6Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnet1RouteTable
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId: !Ref EgressOnlyInternetGateway
  PrivateSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'RouteTable', 'PrivateSubnet2' ]]

  # Access control
  PrivateSubnetsNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'NetworkAcl' ]]
  PrivateSubnetsNetworkAclInboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateSubnetsNetworkAcl
      RuleNumber: 1
      PortRange:
        From: 22 # SSH
        To: 22
      Protocol: 6 # TCP
      RuleAction: allow
      Egress: false
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, Vpc, Ipv4 ]
  PrivateSubnetsNetworkAclOutboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateSubnetsNetworkAcl
      RuleNumber: 2
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0
  PrivateSubnetsNetworkAclIpv6OutboundEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateSubnetsNetworkAcl
      RuleNumber: 3
      Protocol: -1
      RuleAction: allow
      Egress: true
      Ipv6CidrBlock: ::/0

  # Public subnet 1 and 2
  PublicSubnet1:
    DependsOn: IPv6CidrBlock
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, PublicSubnet1, Ipv4 ]
      Ipv6CidrBlock:
        Fn::Sub:
          - '${VpcPart}${SubnetPart}'
          - VpcPart: !Select [ '0', !Split [ '00::/56', !Select [ '0', !GetAtt Vpc.Ipv6CidrBlocks ]]]
            SubnetPart:
              Fn::FindInMap: [ Ref: Category, PublicSubnet1, Ipv6 ]
      AssignIpv6AddressOnCreation: true
      AvailabilityZone: !Sub '${AWS::Region}a'
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'Subnet', 'PublicSubnet1' ]]
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicSubnet1RouteTable
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, PublicSubnet2, Ipv4 ]
      AvailabilityZone: !Sub '${AWS::Region}b'
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'Subnet', 'PublicSubnet2' ]]
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicSubnet2RouteTable

  # Private subnet 1 and 2
  PrivateSubnet1:
    DependsOn: IPv6CidrBlock
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, PrivateSubnet1, Ipv4 ]
      Ipv6CidrBlock:
        Fn::Sub:
          - '${VpcPart}${SubnetPart}'
          - VpcPart: !Select [ '0', !Split [ '00::/56', !Select [ '0', !GetAtt Vpc.Ipv6CidrBlocks ]] ]
            SubnetPart:
              Fn::FindInMap: [ Ref: Category, PrivateSubnet1, Ipv6 ]
      AssignIpv6AddressOnCreation: true
      AvailabilityZone: !Sub '${AWS::Region}a'
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'Subnet', 'PrivateSubnet1' ]]
  PrivateSubnet1AclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref PrivateSubnetsNetworkAcl
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateSubnet1RouteTable
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock:
        Fn::FindInMap: [ Ref: Category, PrivateSubnet2, Ipv4 ]
      AvailabilityZone: !Sub '${AWS::Region}b'
      Tags:
        - Key: Category
          Value: !Ref Category
        - Key: Name
          Value: !Join [ '-', [ Ref: AWS::StackName, Ref: Category, 'Subnet', 'PrivateSubnet2' ]]
  PrivateSubnet2AclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref PrivateSubnetsNetworkAcl
      SubnetId: !Ref PrivateSubnet2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateSubnet2RouteTable

Outputs:
  VpcId:
    Value: !Ref Vpc
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-VpcId'
  VpcCidrBlock:
    Value: !GetAtt Vpc.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-Vpc-CidrBlock'
  VpcIpv6CidrBlock:
    Value: !Select [ '0', !GetAtt Vpc.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-Vpc-Ipv6CidrBlock'
  PublicSubnet1Id:
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet1-Id'
  PublicSubnet1AvailabilityZone:
    Value: !GetAtt PublicSubnet1.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet1-AvailabilityZone'
  PublicSubnet1CidrBlock:
    Value: !GetAtt PublicSubnet1.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet1-CidrBlock'
  PublicSubnet1Ipv6CidrBlock:
    Value: !Select [ '0', !GetAtt PublicSubnet1.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet1-Ipv6CidrBlock'
  PublicSubnet2Id:
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet2-Id'
  PublicSubnet2AvailabilityZone:
    Value: !GetAtt PublicSubnet2.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet2-AvailabilityZone'
  PublicSubnet2CidrBlock:
    Value: !GetAtt PublicSubnet2.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet2-CidrBlock'
  PrivateSubnet1Id:
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet1-Id'
  PrivateSubnet1AvailabilityZone:
    Value: !GetAtt PrivateSubnet1.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet1-AvailabilityZone'
  PrivateSubnet1CidrBlock:
    Value: !GetAtt PrivateSubnet1.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet1-CidrBlock'
  PrivateSubnet1Ipv6CidrBlock:
    Value: !Select [ '0', !GetAtt PrivateSubnet1.Ipv6CidrBlocks ]
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet1-Ipv6CidrBlock'
  PrivateSubnet2Id:
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet2-Id'
  PrivateSubnet2AvailabilityZone:
    Value: GetAtt PrivateSubnet2.AvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet2-AvailabilityZone'
  PrivateSubnet2CidrBlock:
    Value: !GetAtt PrivateSubnet2.CidrBlock
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet2-CidrBlock'
  Category:
    Description: Category name of stack
    Value: !Ref Category
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-Category'
  PublicSubnet1RouteTableId:
    Value: !Ref PublicSubnet1RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet1-RouteTableId'
  PublicSubnet2RouteTableId:
    Value: !Ref PublicSubnet2RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PublicSubnet2-RouteTableId'
  PrivateSubnet1RouteTableId:
    Value: !Ref PrivateSubnet1RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet1-RouteTableId'
  PrivateSubnet2RouteTableId:
    Value: !Ref PrivateSubnet2RouteTable
    Export:
      Name: !Sub '${AWS::StackName}-${AWS::Region}-PrivateSubnet2-RouteTableId'
